@@ -1,3 +1,15 @@
+2019-02-11  Truitt Savell  <tsavell@apple.com>
+
+        Unreviewed, rolling out r241269.
+
+        Caused 5 layout tests crashes on Mac WK1
+
+        Reverted changeset:
+
+        "DumpRenderTree should report unknown options"
+        https://bugs.webkit.org/show_bug.cgi?id=191303
+        https://trac.webkit.org/changeset/241269
+
 2019-02-11  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html does not work on iPad
